# MBExtender-Legacy

./: .gitignore  CMakeLists.txt  COPYING  INSTALL  MBExtender.sln  MBExtender.vcxproj  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
ConsoleSwag/: ConsoleSwag.cpp  ConsoleSwag.vcxproj  ConsoleSwag.vcxproj.filters
MBExtender/: DLLInjection.cpp  DLLInjection.h  MBExtender.cpp  MBExtender.vcxproj  MBExtender.vcxproj.filters
MovingPlatformsFix/: MovingPlatformsFix.cpp  MovingPlatformsFix.vcxproj  MovingPlatformsFix.vcxproj.filters
PluginLoader/: CodeAllocator.cpp  CodeAllocator.h  CodeInjectionStream.cpp  CodeInjectionStream.h  FuncInterceptor.cpp  FuncInterceptor.h  PeSectionFinder.cpp  PeSectionFinder.h  PluginInterface.h  PluginLoader.cpp  PluginLoader.def  PluginLoader.vcxproj  PluginLoader.vcxproj.filters  TGE.h  TrampolineGenerator.cpp  TrampolineGenerator.h  Win32PluginInterface.cpp  Win32PluginInterface.h
PluginLoader/LDE64/: LDE64.h
RandomPowerupsDemo/: RandomPowerupsDemo.cpp  RandomPowerupsDemo.vcxproj  RandomPowerupsDemo.vcxproj.filters  dllmain.cpp
TestPlugin/: TestPlugin.cpp  TestPlugin.vcxproj  TestPlugin.vcxproj.filters
TorqueLib/: LICENSE.txt  QuickOverride.h  TGE.h  TorqueLib.cpp  TorqueLib.vcxproj  TorqueLib.vcxproj.filters
TorqueLib/math/: mBox.cpp  mBox.h  mMathFn.h  mMathSSE.cpp  mMatrix.h  mOrientedBox.cpp  mPlane.cpp  mPlane.h  mPoint.cpp  mPoint2.h  mPoint3.h  mQuat.cpp  mRandom.h  mRect.h  mathUtils.cpp  mathUtils.h
TorqueLib/platform/: platform.h
TorqueLib/util/: tVector.h
TorqueMath/: TorqueMath.cpp  TorqueMath.vcxproj  TorqueMath.vcxproj.filters
TorqueMath/math/: mBoxBase.h  mEase.h  mMath.h  mMathAMD.cpp  mMathAltivec.cpp  mMath_C.cpp  mMatrix.cpp  mOrientedBox.h  mPlaneTransformer.cpp  mPlaneTransformer.h  mPoint4.h  mQuat.h  mRandomDeck.h  mSolver.cpp  mSphere.cpp  mSphere.h  mTransform.h  mathUtils.cpp
TorqueMath/math/util/: quadTransforms.h
TorqueMath/platform/: platform.h  platformAssert.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
include/: Makefile.am  Makefile.in
include/PluginLoader/: PluginInterface.h
include/TorqueLib/: QuickOverride.h  TGE.h
include/TorqueLib/linux/: Addresses-linux.h  InterfaceMacros-linux.h
include/TorqueLib/math/: mAngAxis.h  mBoxBase.h  mEase.h  mMatrix.h  mPlaneSet.h  mRandomSet.h
include/TorqueLib/osx/: Addresses-osx.h
include/TorqueLib/platform/: platform.h
include/TorqueLib/util/: tVector.h
include/TorqueLib/win32/: Addresses-win32.h  InterfaceMacros-win32.h
plugins/ExternalConsole/: ExternalConsole.cpp  ExternalConsole.vcxproj  ExternalConsole.vcxproj.filters  dllmain.cpp
plugins/FakeIgnition/: FakeIgnition.cpp
plugins/FrameRateUnlock/: FrameRateTimer.hpp  FrameRateUnlock.cpp  FrameRateUnlock.vcxproj  FrameRateUnlock.vcxproj.filters  GameTimer.hpp  HighPerformanceTimer.cpp  HighPerformanceTimer.hpp  MultimediaTimer.cpp  MultimediaTimer.hpp
plugins/FrameRateUnlock/linux/: MonotonicTimer-linux.cpp  MonotonicTimer-linux.hpp
plugins/FrameRateUnlock/osx/: MachTimer-osx.cpp  MachTimer-osx.hpp
plugins/FrameRateUnlock/win32/: HighPerformanceTimer-win32.cpp  HighPerformanceTimer-win32.hpp  MultimediaTimer-win32.cpp  MultimediaTimer-win32.hpp
plugins/MovingPlatformsFix/: MovingPlatformsFix.cpp  MovingPlatformsFix.vcxproj  MovingPlatformsFix.vcxproj.filters
plugins/MultiplayerFix/: MultiplayerFix.cpp
plugins/RandomPowerupsDemo/: RandomPowerupsDemo.cpp  RandomPowerupsDemo.vcxproj  RandomPowerupsDemo.vcxproj.filters
plugins/TestPlugin/: TestPlugin.cpp  TestPlugin.vcxproj  TestPlugin.vcxproj.filters
src/FakeVorbis/: FakeVorbis.vcxproj  FakeVorbis.vcxproj.filters  init.cpp  init.h  vorbis.cpp  vorbis.def  vorbis.h
src/MBExtender/: main-unix.cpp
src/MBExtender/linux/: main-linux.cpp
src/MBExtender/unix/: main-unix.cpp
src/MBExtender/win32/: MBExtender.vcxproj  MBExtender.vcxproj.filters
src/MBGPatcher/: PEFile.cpp  PEFile.h  main-win32.cpp
src/PluginLoader/: BasicPluginInterface.cpp  BasicPluginInterface.h  CodeAllocator.cpp  CodeAllocator.h  CodeInjectionStream.cpp  CodeInjectionStream.h  Filesystem-common.cpp  Filesystem.h  FuncInterceptor.cpp  FuncInterceptor.h  LDE64.h  Makefile  Memory.h  PluginLoader.cpp  PluginLoader.vcxproj  PluginLoader.vcxproj.filters  SharedObject.h  StringUtil.cpp  StringUtil.h  TrampolineGenerator.cpp  TrampolineGenerator.h
src/PluginLoader/unix/: Filesystem-unix.cpp  LDE64-as.s  Memory-unix.cpp  SharedObject-unix.cpp  main-unix.cpp
src/PluginLoader/win32/: Filesystem-win32.cpp  LDE64-masm.asm  Memory-win32.cpp  SharedObject-win32.cpp  main-win32.cpp
src/TorqueLib/: TorqueLib.cpp  TorqueLib.vcxproj  TorqueLib.vcxproj.filters
src/TorqueLib/math/: mAngAxis.cpp  mEase.cpp  mMath_C.cpp  mPlane.cpp  mRandom.cpp  mRect.cpp  mSolver.cpp  mSphere.cpp  mathUtils.cpp
src/TorqueLib/math/util/: quadTransforms.cpp
