nobase_include_HEADERS = \
	PluginLoader/PluginInterface.h \
	TorqueLib/math/mRect.h \
	TorqueLib/math/mPlaneTransformer.h \
	TorqueLib/math/mEase.h \
	TorqueLib/math/mOrientedBox.h \
	TorqueLib/math/mTransform.h \
	TorqueLib/math/mQuat.h \
	TorqueLib/math/mPlane.h \
	TorqueLib/math/mPoint3.h \
	TorqueLib/math/util/quadTransforms.h \
	TorqueLib/math/mMathFn.h \
	TorqueLib/math/mAngAxis.h \
	TorqueLib/math/mPoint2.h \
	TorqueLib/math/mathUtils.h \
	TorqueLib/math/mBox.h \
	TorqueLib/math/mConstants.h \
	TorqueLib/math/mSilhouetteExtractor.h \
	TorqueLib/math/mRandom.h \
	TorqueLib/math/mSphere.h \
	TorqueLib/math/mRandomSet.h \
	TorqueLib/math/mMatrix.h \
	TorqueLib/math/mPlaneSet.h \
	TorqueLib/math/mRandomDeck.h \
	TorqueLib/math/mPoint4.h \
	TorqueLib/math/mMath.h \
	TorqueLib/math/mBoxBase.h \
	TorqueLib/util/tVector.h \
	TorqueLib/QuickOverride.h \
	TorqueLib/linux/InterfaceMacros-linux.h \
	TorqueLib/linux/Addresses-linux.h \
	TorqueLib/platform/platform.h \
	TorqueLib/platform/platformAssert.h \
	TorqueLib/TGE.h
